log
Fri Apr 17 06:37:24 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:75:5: error: expected expression before ‘return’
   75 |     return NULL;
      |     ^~~~~~
hashmap.c:73:10: error: unused variable ‘pos’ [-Werror=unused-variable]
   73 |     long pos=
      |          ^~~
hashmap.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
f51a7f7
Fri Apr 17 06:37:46 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
8f42c63
Fri Apr 17 06:52:19 PM UTC 2026: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:21: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   76 |         map->current=map->buckets[pos] ;
      |                     ^
hashmap.c:77:19: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Wint-conversion]
   77 |         return map->current ;
      |                ~~~^~~~~~~~~
hashmap.c:82:25: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   82 |             map->current=map->buckets[pos] ;
      |                         ^
hashmap.c:83:23: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Wint-conversion]
   83 |             return map->current ;
      |                    ~~~^~~~~~~~~
f8f650b
Fri Apr 17 06:54:05 PM UTC 2026: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:76:21: error: assignment to ‘long int’ from ‘Pair **’ makes integer from pointer without a cast [-Wint-conversion]
   76 |         map->current=map->buckets ;
      |                     ^
hashmap.c:77:19: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Wint-conversion]
   77 |         return map->current ;
      |                ~~~^~~~~~~~~
hashmap.c:82:25: error: assignment to ‘long int’ from ‘Pair **’ makes integer from pointer without a cast [-Wint-conversion]
   82 |             map->current=map->buckets ;
      |                         ^
hashmap.c:83:23: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Wint-conversion]
   83 |             return map->current ;
      |                    ~~~^~~~~~~~~
c9debf3
Fri Apr 17 06:54:48 PM UTC 2026: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
bee2019
Fri Apr 17 06:55:58 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f87d332
